
PROJECT(Examples)

SET(PF_EXAMPLES_SRC PfMain.c)
ADD_DEFINITIONS(-DPF_LOG_CLASS_DEFAULT=PF_LOG_CLASS_PENGUIN)

# Compiler options
ADD_DEFINITIONS(-Wall)

INCLUDE_DIRECTORIES(${PF_PROJECT_DIR}/include ${PF_PROJECT_DIR}/include/transport)

ADD_EXECUTABLE(penguin ${PF_EXAMPLES_SRC})

TARGET_LINK_LIBRARIES(penguin core)